examples/bad/share_match_for_live.mko
// EXPECT: already shared
// match + for: second share of same local while first share is live.
fn main() {
    let x = 1
    let a = share_int(x)
    match 1 {
        0 => { },
        _ => {
            for i in range 1 {
                let b = share_int(x)
                share_drop(b)
            }
        },
    }
    share_drop(a)
}
